--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,10 +11,26 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "daisyui": "^2.20.0",
+    "firebase": "^9.9.1",
+    "firebaseui": "^6.0.1",
+    "leaflet": "^1.8.0",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-cookie-consent": "^7.6.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-leaflet": "^4.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
+    "swiper": "^8.3.2",
+    "tailwindcss-color-suite": "^0.6.0",
+    "toastify": "^2.0.1",
     "typescript": "^4.7.4",
+    "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +56,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@prettier/plugin-xml": "^2.2.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.4",
+    "@types/leaflet": "^1.7.11",
+    "@types/react-helmet": "^6.1.5",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.6"
   }
 }
